Rewrite the mod discovery process with a focus on better end-to-end reporting of errors and warnings
Co-authored-by: Matyrobbrt <matyrobbrt@gmail.com>
Co-authored-by: Technici4n <13494793+technici4n@users.noreply.github.com>