@@ -69,6 +69,9 @@ allprojects {
 
     test {
         useJUnitPlatform()
+
+        // Needed by UnionFS
+        jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
     }
 }
 
